--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "nuxt": "^3.11.2",
+    "nuxt-icons": "^3.2.1",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
