--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@nuxtjs/i18n": "^8.3.1",
     "nuxt": "^3.11.2",
-    "nuxt-icons": "^3.2.1",
+    "nuxt-svgo": "^4.0.1",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
