--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@nuxt/eslint-config": "^0.3.13",
     "@stylistic/eslint-plugin": "^2.2.0",
     "eslint": "^8.57.0",
-    "sass": "^1.77.4"
+    "eslint-plugin-vue": "^9.26.0",
+    "sass": "^1.77.4",
+    "vue-eslint-parser": "^9.4.3"
   }
 }
